# jwalk

./: Cargo.toml
.gitea/workflows/: main.yaml
.github/workflows/: ci.yml  main.yml
benches/: walk_benchmark.rs
src/: lib.rs
src/core/: error.rs
