[package]
name = "jwalk"
version = "0.8.1"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk/"
homepage = "https://github.com/byron/jwalk"
repository = "https://github.com/byron/jwalk"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2021"

[dependencies]
rayon = "1.8"
crossbeam = "0.8"

[dev-dependencies]
criterion = "0.5"
fs_extra = "1.3"
walkdir = "2.4"
ignore = "0.4"
tempfile = "3.9"
num_cpus = "1.16"
lazy_static = "1.4"

# For examples
clap = { version = "4.4.13", features = ["derive"] }
bytesize = "1.3.0"

[[bench]]
name = "walk_benchmark"
harness = false
