[package]
name = "jwalk"
version = "0.8.1"
authors = ["Jesse Grosjean <jesse@hogbaysoftware.com>", "Sebastian Thiel <byronimo@gmail.com>"]
description = "Filesystem walk performed in parallel with streamed and sorted results."
documentation = "https://docs.rs/jwalk/"
homepage = "https://github.com/byron/jwalk"
repository = "https://github.com/byron/jwalk"
readme = "README.md"
keywords = ["directory", "recursive", "walk", "iterator", "parallel"]
categories = ["filesystem", "concurrency"]
license = "MIT"
edition = "2021"

[dependencies]
rayon = "=1.10.0"
crossbeam = "=0.8.4"

[dev-dependencies]
criterion = "=0.6.0"
fs_extra = "=1.3.0"
walkdir = "=2.5.0"
ignore = "=0.4.23"
tempfile = "=3.20.0"
num_cpus = "=1.17.0"
lazy_static = "=1.5.0"

# For examples
clap = { version = "=4.5.39", features = ["derive"] }
bytesize = "=2.0.1"

[[bench]]
name = "walk_benchmark"
harness = false
